--- a/gradle.properties
+++ b/gradle.properties
@@ -35,9 +35,9 @@ lr.docker.environment.compose.files=
 # Enable each service or "service" that you would like to include in your
 # environment. If the value is "true" or "1", the service is enabled. Any other
 # value (or a blank value) is ignored and disables the service.
-lr.docker.environment.compose.service.enabled[elasticsearch]=true
-lr.docker.environment.compose.service.enabled[liferay]=true
-lr.docker.environment.compose.service.enabled[mysql]=true
+lr.docker.environment.service.enabled[elasticsearch]=true
+lr.docker.environment.service.enabled[liferay]=true
+lr.docker.environment.service.enabled[mysql]=true
 
 # Optional
 #
