sets cluster nodes as an environment variable

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATA_DIRECTORY=${DATA_DIRECTORY:-data}
 DATABASE_NAME=${DATABASE_NAME:-lportal}
+LIFERAY_CLUSTER_NODES=${LIFERAY_CLUSTER_NODES:-1}
 LIFERAY_IMAGE_NAME=${LIFERAY_IMAGE_NAME:-liferay/dxp:latest}
 NAMESPACE=${NAMESPACE:-lportal}
