--- a/compose-recipes/liferay/clustering.liferay.yaml
+++ b/compose-recipes/liferay/clustering.liferay.yaml
@@ -7,6 +7,9 @@ services:
         depends_on:
             liferay:
                 condition: service_healthy
+        deploy:
+            mode: replicated
+            replicas: ${LIFERAY_CLUSTER_NODES}
         environment:
             - LIFERAY_CLUSTER_PERIOD_LINK_PERIOD_ENABLED=true
             - LIFERAY_DISABLE_TRIAL_LICENSE=true
