uses a dedicated Dockerfile for the helper

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,8 @@ name: "${NAMESPACE}"
 services:
     data-helper:
         build:
-            dockerfile_inline: |
-                FROM busybox:latest
-
-                USER 1000
-
-                COPY --chown=1000:1000 ${DATA_DIRECTORY} /data/container-data
-
-                RUN mkdir -p /data/container-data/elasticsearch
-                RUN mkdir -p /data/container-data/liferay
-                RUN mkdir -p /data/container-data/mysql
-
-                COPY --chown=1000:1000 dumps /data/dumps
-
-                RUN mkdir -p /data/dumps
+            context: .
+            dockerfile: Dockerfile.helper
         container_name: ${NAMESPACE}-data-helper
         volumes:
             - data-volume:/data
