--- a/compose-recipes/elasticsearch/service.elasticsearch.yaml
+++ b/compose-recipes/elasticsearch/service.elasticsearch.yaml
@@ -1,14 +1,6 @@
 services:
     elasticsearch:
-        build:
-            dockerfile_inline:
-                FROM elasticsearch:7.17.9
-
-                RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install
-                    analysis-icu
-                    analysis-kuromoji
-                    analysis-smartcn
-                    analysis-stempel
+        build: ./compose-recipes/elasticsearch
         container_name: "${NAMESPACE}-elasticsearch"
         environment:
             - ES_JAVA_OPTS=-Xms1g -Xmx1g
