docker-compose.yaml: passes data directory as an arg to the Dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ name: "${NAMESPACE}"
 services:
     data-helper:
         build:
+            args:
+                DATA_DIRECTORY: ${DATA_DIRECTORY}
             context: .
             dockerfile: Dockerfile.helper
         container_name: ${NAMESPACE}-data-helper
