build.gradle: adds shareWorkspace task to zip up the workspace with the data directory

--- a/build.gradle
+++ b/build.gradle
@@ -163,6 +163,41 @@ tasks.register("prepareHotfixes", Download) {
 	src config.hotfixURLs
 }
 
+tasks.register("shareWorkspace", Zip) {
+	archiveFileName = provider {
+		DateTimeFormatter formatter = DateTimeFormatter.
+		ofPattern("yyyyMMdd.HHmmss").
+		withZone(ZoneId.systemDefault())
+
+		"workspace_${config.namespace}_${formatter.format(Instant.now())}.zip"
+	}
+
+	destinationDirectory = file 'shared_workspaces'
+
+	doLast {
+		logger.lifecycle "\nWorkspace zip: ${archiveFile.get()}\n"
+	}
+
+	exclude ".gitkeep"
+	exclude ".gitignore"
+	exclude ".git"
+	exclude ".gradle"
+	exclude "shared_workspaces"
+	exclude {
+		it.relativePath.pathString.startsWith("exported_data/") &&
+		!it.relativePath.pathString.startsWith(config.dataDirectory)
+	}
+
+	from '.'
+
+	include "${config.dataDirectory}/**"
+	include "**/*"
+
+	outputs.upToDateWhen {
+		false
+	}
+}
+
 clean {
 	dependsOn ":cleanPrepareHotfixes"
 }
