gradle.properties improvements

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,9 @@ liferay.workspace.themes.dir=themes
 liferay.workspace.wars.dir=modules
 microsoft.translator.subscription.key=
 
-# Required
+# Optional
+#
+# Either this property or liferay.workspace.docker.image.liferay is required
 #
 # Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
@@ -17,9 +19,11 @@ liferay.workspace.product=dxp-2024.q3.8
 
 # Optional
 #
+# Either this property or liferay.workspace.product is required
+#
 # Overrides the Liferay Docker image version defined in liferay.workspace.product
-# Declare this only if you need a more specific version than the one provided
-# through the product key above.
+# Declare if you need a more specific version than the one provided through the
+# product key above.
 #
 # You can also use this to reference a nightly build like liferay/dxp:7.4.13.nightly
 liferay.workspace.docker.image.liferay=
@@ -35,9 +39,9 @@ lr.docker.environment.compose.files=
 # Enable each service or "service" that you would like to include in your
 # environment. If the value is "true" or "1", the service is enabled. Any other
 # value (or a blank value) is ignored and disables the service.
-lr.docker.environment.service.enabled[elasticsearch]=true
+lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
-lr.docker.environment.service.enabled[mysql]=true
+lr.docker.environment.service.enabled[mysql]=false
 
 # Optional
 #
@@ -45,7 +49,7 @@ lr.docker.environment.service.enabled[mysql]=true
 # These directories created from running docker-compose instances using:
 #
 # ./gradlew exportContainerData
-lr.docker.environment.data.directory=
+lr.docker.environment.data.directory=data
 
 # Required if using a database
 #
