--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 buildscript {
 	dependencies {
-		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.workspace", version: "12.0.0"
+		classpath(group: "com.liferay", name: "com.liferay.gradle.plugins.workspace", version: "12.0.0") {
+			exclude group: "net.java.dev.jna", module: "jna"
+		}
+		classpath group: "net.java.dev.jna", name: "jna", version: "5.14.0"
 	}
 
 	repositories {
