--- a/gradle.properties
+++ b/gradle.properties
@@ -67,7 +67,7 @@ lr.docker.environment.hotfix.urls=
 #
 # The namespace to use for the docker-compose instance.
 # You should not need to change this.
-lr.docker.environment.namespace=lrwsde
+lr.docker.environment.namespace=LRWSDE
 
 # The number of cluster nodes to start up in addition to the main Liferay
 # instance. Setting this to 0 means there is no clustering.
