--- a/Dockerfile.helper
+++ b/Dockerfile.helper
@@ -9,6 +9,7 @@ COPY --chown=1000:1000 ${DATA_DIRECTORY} /data/container-data
 RUN mkdir -p /data/container-data/elasticsearch
 RUN mkdir -p /data/container-data/liferay
 RUN mkdir -p /data/container-data/mysql
+RUN mkdir -p /data/container-data/postgres
 
 COPY --chown=1000:1000 dumps /data/dumps
 
