--- a/gradle.properties
+++ b/gradle.properties
@@ -60,6 +60,11 @@ lr.docker.environment.database.name=lportal
 
 # Optional
 #
+# Set to "true" or "1" if you want to enable database partitioning (MySQL or PostgreSQL only)
+lr.docker.environment.database.partitioning.enabled=false
+
+# Optional
+#
 # Comma-separated list of URLs pointing to hotfixes. These will be automatically
 # downloaded and copied to the Liferay container before startup.
 lr.docker.environment.hotfix.urls=
