LPD-54657 unify the database data dir since we will not have multiple database services at the same time

--- a/compose-recipes/mysql/service.mysql.yaml
+++ b/compose-recipes/mysql/service.mysql.yaml
@@ -28,4 +28,4 @@ services:
               target: /var/lib/mysql
               type: volume
               volume:
-                  subpath: container-data/mysql
+                  subpath: container-data/database
