--- a/compose-recipes/postgres/service.postgres.yaml
+++ b/compose-recipes/postgres/service.postgres.yaml
@@ -1,6 +1,6 @@
 services:
     database:
-        image: postgres:16.3
+        build: ./compose-recipes/postgres
         container_name: "${NAMESPACE}-database-postgres"
         shm_size: 128mb
         environment:
@@ -11,7 +11,7 @@ services:
             interval: 5s
             retries: 50
             start_period: 30s
-            test: "pg_isready -U liferay -d ${DATABASE_NAME}"
+            test: "pg_isready -U liferay -d ${DATABASE_NAME} && grep 'STARTING_UP' /startup_log.txt"
             timeout: 5s
         ports:
             - "5433:5432"
