opens the debugger port on the Liferay instance by default

--- a/compose-recipes/liferay/service.liferay.yaml
+++ b/compose-recipes/liferay/service.liferay.yaml
@@ -1,6 +1,8 @@
 services:
     liferay:
         container_name: ${NAMESPACE}-liferay
+        environment:
+            - LIFERAY_JPDA_ENABLED=true
         healthcheck:
             interval: 5s
             start_period: 5m
