SF: move property reading to the Config constructor just to tidy things up

--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,71 @@ plugins {
 	id "com.avast.gradle.docker-compose" version "0.17.10"
 }
 
-static List toList(String s) {
-	return s.trim().split(",").grep()
-}
-
 String[] databasePartitioningCompatibleServiceNames = ["mysql", "postgres"]
 File projectDir = project.projectDir as File
 
 class Config {
+
+	public Config(Project project) {
+		Integer clusterNodes = project.getProperty("lr.docker.environment.cluster.nodes") as Integer
+
+		if (clusterNodes != null) {
+			this.clusterNodes = clusterNodes
+		}
+
+		this.composeFiles.add("docker-compose.yaml")
+
+		this.composeFiles.addAll(this.toList(project.getProperty("lr.docker.environment.compose.files")))
+
+		String databaseName = project.getProperty("lr.docker.environment.database.name")
+
+		if (databaseName != null) {
+			this.databaseName = databaseName
+		}
+
+		String databasePartitioningEnabled = project.getProperty("lr.docker.environment.database.partitioning.enabled")
+
+		if (databasePartitioningEnabled != null) {
+			this.databasePartitioningEnabled = databasePartitioningEnabled.toBoolean()
+		}
+
+		String dataDirectory = project.getProperty("lr.docker.environment.data.directory")
+
+		if (dataDirectory != null && dataDirectory.length() > 0) {
+			this.dataDirectory = dataDirectory
+		}
+
+		List hotfixURLs = this.toList(project.getProperty("lr.docker.environment.hotfix.urls"))
+
+		if (!hotfixURLs.isEmpty()) {
+			this.hotfixURLs = hotfixURLs
+		}
+
+		String namespace = project.getProperty("lr.docker.environment.namespace")
+
+		if (namespace != null) {
+			this.namespace = namespace
+		}
+
+		List services = project.properties.findAll {
+			it.key =~ /^lr.docker.environment.service.enabled\[\w+\]$/
+		}.findAll {
+			it.value =~ /true|1/
+		}.collect {
+			it.key.substring(it.key.indexOf("[") + 1, it.key.indexOf("]"))
+		}
+
+		if (!services.isEmpty()) {
+			this.services = services
+		}
+
+		this.liferayDockerImageId = "${this.namespace.toLowerCase()}-liferay"
+	}
+
+	static List toList(String s) {
+		return s.trim().split(",").grep()
+	}
+
 	public int clusterNodes = 0
 	public List<String> composeFiles = new ArrayList<String>()
 	public String databaseName = "lportal"
@@ -49,54 +106,7 @@ services: ${services}
 	}
 }
 
-Config config = new Config()
-
-config.composeFiles.add("docker-compose.yaml")
-
-Integer clusterNodes = project.getProperty("lr.docker.environment.cluster.nodes") as Integer
-def composeFiles = toList(project.getProperty("lr.docker.environment.compose.files"))
-String databaseName = project.getProperty("lr.docker.environment.database.name")
-String databasePartitioningEnabled = project.getProperty("lr.docker.environment.database.partitioning.enabled")
-String dataDirectory = project.getProperty("lr.docker.environment.data.directory")
-List hotfixURLs = toList(project.getProperty("lr.docker.environment.hotfix.urls"))
-String namespace = project.getProperty("lr.docker.environment.namespace")
-List services = project.properties.findAll {
-	it.key =~ /^lr.docker.environment.service.enabled\[\w+\]$/
-}.findAll {
-	it.value =~ /true|1/
-}.collect {
-	it.key.substring(it.key.indexOf("[") + 1, it.key.indexOf("]"))
-}
-
-if (clusterNodes != null) {
-	config.clusterNodes = clusterNodes
-}
-
-if (databaseName != null) {
-	config.databaseName = databaseName
-}
-
-if (databasePartitioningEnabled != null) {
-	config.databasePartitioningEnabled = databasePartitioningEnabled.toBoolean()
-}
-
-if (dataDirectory != null && dataDirectory.length() > 0) {
-	config.dataDirectory = dataDirectory
-}
-
-if (!hotfixURLs.isEmpty()) {
-	config.hotfixURLs = hotfixURLs
-}
-
-if (namespace != null) {
-	config.namespace = namespace
-}
-
-if (!services.isEmpty()) {
-	config.services = services
-}
-
-config.liferayDockerImageId = "${config.namespace.toLowerCase()}-liferay"
+Config config = new Config(project)
 
 gradle.liferayWorkspace {
 	dockerImageId = config.liferayDockerImageId
