pre upgrade version

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DATA_DIRECTORY=${DATA_DIRECTORY:-data}
-DATABASE_NAME=${DATABASE_NAME:-lportal}
-LIFERAY_CLUSTER_NODES=${LIFERAY_CLUSTER_NODES:-1}
-LIFERAY_IMAGE_NAME=${LIFERAY_IMAGE_NAME:-liferay/dxp:latest}
-NAMESPACE=${NAMESPACE:-lportal}
+DATA_DIRECTORY=data
+DATABASE_NAME=lportal
+NAMESPACE=LRWSDE
+LIFERAY_IMAGE_NAME=lrwsde-liferay
+COMPOSE_FILE=docker-compose.yaml:compose-recipes/liferay/service.liferay.yaml
+COMPOSE_PROJECT_NAME=lrwsde
