--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ microsoft.translator.subscription.key=
 #
 # Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
-liferay.workspace.product=dxp-2024.q3.8
+liferay.workspace.product=
 
 # Optional
 #
@@ -26,7 +26,7 @@ liferay.workspace.product=dxp-2024.q3.8
 # product key above.
 #
 # You can also use this to reference a nightly build like liferay/dxp:7.4.13.nightly
-liferay.workspace.docker.image.liferay=
+liferay.workspace.docker.image.liferay=liferay/dxp:2024.q1.7
 
 # Optional
 #
@@ -67,7 +67,7 @@ lr.docker.environment.database.partitioning.enabled=false
 #
 # Comma-separated list of URLs pointing to hotfixes. These will be automatically
 # downloaded and copied to the Liferay container before startup.
-lr.docker.environment.hotfix.urls=
+lr.docker.environment.hotfix.urls=https://releases-cdn.liferay.com/dxp/hotfix/2024.q1.7/liferay-dxp-2024.q1.7-hotfix-39.zip
 
 # Required
 #
