--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+
+
 ##
 ## Check GETTING_STARTED.markdown for additional properties and their default
 ## values.
@@ -15,7 +17,7 @@ microsoft.translator.subscription.key=
 #
 # Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
-liferay.workspace.product=dxp-2024.q3.8
+# liferay.workspace.product=dxp-2024.q3.8
 
 # Optional
 #
@@ -26,7 +28,7 @@ liferay.workspace.product=dxp-2024.q3.8
 # product key above.
 #
 # You can also use this to reference a nightly build like liferay/dxp:7.4.13.nightly
-liferay.workspace.docker.image.liferay=
+liferay.workspace.docker.image.liferay=liferay/dxp:2024.q4.4
 
 # Optional
 #
@@ -41,7 +43,7 @@ lr.docker.environment.compose.files=
 # value (or a blank value) is ignored and disables the service.
 lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
-lr.docker.environment.service.enabled[mysql]=false
+lr.docker.environment.service.enabled[mysql]=true
 lr.docker.environment.service.enabled[postgres]=false
 
 # Optional
@@ -67,13 +69,13 @@ lr.docker.environment.database.partitioning.enabled=false
 #
 # Comma-separated list of URLs pointing to hotfixes. These will be automatically
 # downloaded and copied to the Liferay container before startup.
-lr.docker.environment.hotfix.urls=
+lr.docker.environment.hotfix.urls=https://releases-cdn.liferay.com/dxp/hotfix/2024.q4.4/liferay-dxp-2024.q4.4-hotfix-36.zip
 
 # Required
 #
 # The namespace to use for the docker-compose instance.
 # You should not need to change this.
-lr.docker.environment.namespace=LRWSDE
+lr.docker.environment.namespace=zd130491
 
 # The number of cluster nodes to start up in addition to the main Liferay
 # instance. Setting this to 0 means there is no clustering.
