initial environment setup for ticket 135631

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ microsoft.translator.subscription.key=
 #
 # Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
-liferay.workspace.product=dxp-2024.q3.8
+# liferay.workspace.product=dxp-2024.q3.8
 
 # Optional
 #
@@ -26,7 +26,7 @@ liferay.workspace.product=dxp-2024.q3.8
 # product key above.
 #
 # You can also use this to reference a nightly build like liferay/dxp:7.4.13.nightly
-liferay.workspace.docker.image.liferay=
+liferay.workspace.docker.image.liferay=liferay/dxp:7.4.13-u92
 
 # Optional
 #
@@ -73,7 +73,7 @@ lr.docker.environment.hotfix.urls=
 #
 # The namespace to use for the docker-compose instance.
 # You should not need to change this.
-lr.docker.environment.namespace=LRWSDE
+lr.docker.environment.namespace=135631
 
 # The number of cluster nodes to start up in addition to the main Liferay
 # instance. Setting this to 0 means there is no clustering.
