updated initial env setup

--- a/configs/common/properties/fast-login.properties
+++ b/configs/common/properties/fast-login.properties
@@ -19,3 +19,5 @@ users.last.name.required=false
 
 users.reminder.queries.custom.question.enabled=false
 users.reminder.queries.enabled=false
+
+users.update.last.login=false
