updated tag and pproerties

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DATA_DIRECTORY=${DATA_DIRECTORY:-data}
-DATABASE_NAME=${DATABASE_NAME:-lportal}
-LIFERAY_CLUSTER_NODES=${LIFERAY_CLUSTER_NODES:-1}
-LIFERAY_IMAGE_NAME=${LIFERAY_IMAGE_NAME:-liferay/dxp:latest}
-NAMESPACE=${NAMESPACE:-lportal}
+DATA_DIRECTORY=data
+DATABASE_NAME=lportal
+NAMESPACE=136172
+LIFERAY_IMAGE_NAME=136172-liferay
+COMPOSE_FILE=docker-compose.yaml:compose-recipes/liferay/service.liferay.yaml:compose-recipes/mysql/service.mysql.yaml:compose-recipes/mysql/liferay.mysql.yaml
+COMPOSE_PROJECT_NAME=136172
