--- a/configs/common/properties/fast-login.properties
+++ b/configs/common/properties/fast-login.properties
@@ -21,3 +21,28 @@ users.reminder.queries.custom.question.enabled=false
 users.reminder.queries.enabled=false
 
 users.update.last.login=false
+
+# Security and User Management: Controls aspects like stranger verification, password policy, setup wizard, and terms of use
+company.security.strangers.verify=false
+passwords.default.policy.change.required=false
+setup.wizard.enabled=false
+terms.of.use.required=false
+users.reminder.queries.enabled=false
+captcha.enforce.disabled=true
+
+# Mail Configuration: Manages settings related to sending emails, including blacklisting certain addresses
+mail.send.blacklist=
+
+tunneling.servlet.shared.secret=6162636465666768696a6b6c6d6e6f70
+tunneling.servlet.shared.secret.hex=true
+tunnel.servlet.hosts.allowed=127.0.0.1
+
+
+# Session Management: Configures session timeout and auto-extension behavior
+session.timeout.auto.extend=true
+
+# Browser Configuration: URL for browser launcher, if applicable
+browser.launcher.url=
+
+# Virtual Hosts: Defines a list of valid hosts for the server
+virtual.hosts.valid.hosts=localhost,127.0.0.1,192.168.1.179,192.168.1.138,192.168.1.134,192.168.86.41
