--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ microsoft.translator.subscription.key=
 # product key above.
 #
 # You can also use this to reference a nightly build like liferay/dxp:7.4.13.nightly
-liferay.workspace.docker.image.liferay=lifray/dxp:2024.Q4.2
+liferay.workspace.docker.image.liferay=lifray/dxp:2024.q4.2
 
 # Optional
 #
