--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ import java.time.format.DateTimeFormatter
 
 plugins {
 	id "com.avast.gradle.docker-compose" version "0.17.10"
+	id "docker-liferay-bundle"
 }
 
 ext {
@@ -125,7 +126,7 @@ composeBuild {
 
 composeUp {
 	if (config.useLiferay) {
-		dependsOn ":buildDockerImage"
+		dependsOn ":buildDockerImage", ":checkForLiferayLicense"
 	}
 
 	doFirst {
