--- a/gradle.properties
+++ b/gradle.properties
@@ -43,6 +43,7 @@ lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
 lr.docker.environment.service.enabled[mysql]=false
 lr.docker.environment.service.enabled[postgres]=false
+lr.docker.environment.service.enabled[webserver]=false
 
 # Optional
 #
