LPD-57218 make the hostnames configurable

--- a/gradle.properties
+++ b/gradle.properties
@@ -79,3 +79,8 @@ lr.docker.environment.namespace=LRWSDE
 # The number of cluster nodes to start up in addition to the main Liferay
 # instance. Setting this to 0 means there is no clustering.
 lr.docker.environment.cluster.nodes=0
+
+# Optional
+#
+# The comma-delimited list of hostnames (domains) used to access Liferay when using a webserver.
+lr.docker.environment.web.server.hostnames=my.example.com
