--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,12 @@ class Config {
 		}
 
 		this.liferayDockerImageId = "${this.namespace.toLowerCase()}-liferay"
+
+		def webserverHostnames = project.getProperty("lr.docker.environment.web.server.hostnames").split(',')*.trim().findAll { it }
+
+		if(webserverHostnames != null) {
+			this.webserverHostnames = webserverHostnames.join(' ')
+		}
 	}
 
 	static List toList(String s) {
@@ -84,6 +90,7 @@ class Config {
 	public String liferayDockerImageId = ""
 	public String namespace = "lrswde"
 	public List<String> services = new ArrayList<String>()
+	public String webserverHostnames = "my.example.com"
 
 	@Override
 	public String toString() {
@@ -101,6 +108,7 @@ hotfixURLs: ${hotfixURLs}
 liferayDockerImageId: ${liferayDockerImageId}
 namespace: ${namespace}
 services: ${services}
+webserverHostnames: ${webserverHostnames}
 
 """
 	}
@@ -275,6 +283,55 @@ if (useLiferay) {
 environmentMap.put("COMPOSE_FILE", config.composeFiles.join(File.pathSeparator))
 environmentMap.put("COMPOSE_PROJECT_NAME", config.namespace.toLowerCase())
 
+if(useWebserver) {
+	File webserverConfigDir = "compose-recipes/webserver/config" as File
+	File webserverDefaultConfig = "$webserverConfigDir/default.conf" as File
+
+	String webserverConfigUpstreamBlock = useClustering ? """upstream appserver-http {
+	ip_hash;
+	server liferay:8080;
+	server liferay-cluster-node:8080;
+}
+""" : """upstream appserver-http {
+	ip_hash;
+	server liferay:8080;
+}
+"""
+
+	String webserverConfig = """proxy_cache_path  /tmp/cache levels=1:2 keys_zone=STATIC:10m inactive=24h max_size=1g;
+
+server {
+	listen 80;
+
+	server_name ${config.webserverHostnames};
+
+	location / {
+		proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto \$http_x_forwarded_proto;
+		proxy_set_header X-Forwarded-Port \$http_x_forwarded_port;
+		proxy_set_header Host \$host;
+		proxy_set_header X-Real-IP \$http_x_forwarded_for;
+		proxy_set_header Upgrade \$http_upgrade;
+		proxy_set_header Connection \$http_connection;
+		proxy_buffering on;
+		proxy_cache STATIC;
+		proxy_cache_valid 200 1d;
+		proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
+		proxy_pass http://appserver-http;
+	}
+
+	location /nginx_status {
+		stub_status on;
+		allow all;
+	}
+}
+
+${webserverConfigUpstreamBlock}
+"""
+
+	webserverDefaultConfig.text = webserverConfig
+}
+
 new File('.env').withOutputStream {
 	BufferedOutputStream envFileOutputStream ->
 
@@ -283,17 +340,6 @@ new File('.env').withOutputStream {
 
 		envFileOutputStream << key << "=" << value << "\n"
 	}
-}
-
-File webserverConfigDir = "compose-recipes/webserver/config" as File
-File webserverDefaultConfig = "$webserverConfigDir/default.conf" as File
-
-if(useClustering && useWebserver) {
-	File webserverClusterConfig = "$webserverConfigDir/default-cluster.conf" as File
-	webserverDefaultConfig.text = webserverClusterConfig.text
-} else if(!useClustering && useWebserver) {
-	File webserverSingleConfig = "$webserverConfigDir/default-single.conf" as File
-	webserverDefaultConfig.text = webserverSingleConfig.text
 }
 
 dockerCompose {
@@ -314,5 +360,5 @@ dockerCompose {
 	useComposeFiles = config.composeFiles
 
 	// DEBUG: Set to true if container startup is failing
-	retainContainersOnStartupFailure = false
+	retainContainersOnStartupFailure = true
 }
