--- a/compose-recipes/webserver/clustering.webserver.yaml
+++ b/compose-recipes/webserver/clustering.webserver.yaml
@@ -3,3 +3,7 @@ services:
         depends_on:
             liferay-cluster-node:
                 condition: service_healthy
+    liferay-cluster-node:
+        environment:
+            - LIFERAY_WEB_PERIOD_SERVER_PERIOD_DISPLAY_PERIOD_NODE=true
+            - LIFERAY_WEB_PERIOD_SERVER_PERIOD_HTTP_PERIOD_PORT=80
