disable the trial license on every environment

--- a/build.gradle
+++ b/build.gradle
@@ -317,7 +317,7 @@ server {
 		proxy_cache STATIC;
 		proxy_cache_valid 200 1d;
 		proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
-		proxy_pass http://appserver-http;
+		proxy_pass http://appserver-\$scheme;
 	}
 
 	location /nginx_status {
