--- a/gradle.properties
+++ b/gradle.properties
@@ -83,4 +83,4 @@ lr.docker.environment.cluster.nodes=0
 # Optional
 #
 # The comma-delimited list of hostnames (domains) used to access Liferay when using a webserver.
-lr.docker.environment.web.server.hostnames=my.example.com
+lr.docker.environment.web.server.hostnames=localhost
