LPD-58630 shows startup output by default

--- a/build.gradle
+++ b/build.gradle
@@ -317,7 +317,7 @@ new File('.env').withOutputStream {
 
 dockerCompose {
 	// DEBUG: Set to true to print container startup output to the console
-	captureContainersOutput = false
+	captureContainersOutput = true
 
 	// DEBUG: Uncomment to dump the container logs to a directory for inspection
 	// captureContainersOutputToFiles = project.file('containerLogs')
