LPD-54657 Add a restart command

--- a/build.gradle
+++ b/build.gradle
@@ -82,8 +82,13 @@ tasks.register("shareWorkspace", Zip) {
 	}
 }
 
+tasks.register("restart") {
+	dependsOn ":stop", ":start"
+}
+
 tasks.register("start") {
 	dependsOn ":composeUp"
+	mustRunAfter ":stop"
 }
 
 tasks.register("stop") {
