--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ microsoft.translator.subscription.key=
 #
 # Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
-liferay.workspace.product=dxp-2024.q3.8
+liferay.workspace.product=dxp-2024.q1.10
 
 # Optional
 #
@@ -67,13 +67,13 @@ lr.docker.environment.database.partitioning.enabled=false
 #
 # Comma-separated list of URLs pointing to hotfixes. These will be automatically
 # downloaded and copied to the Liferay container before startup.
-lr.docker.environment.hotfix.urls=
+lr.docker.environment.hotfix.urls=https://releases-cdn.liferay.com/dxp/hotfix/2024.q1.10/liferay-dxp-2024.q1.10-hotfix-229.zip
 
 # Required
 #
 # The namespace to use for the docker-compose instance.
 # You should not need to change this.
-lr.docker.environment.namespace=LRWSDE
+lr.docker.environment.namespace=137600
 
 # The number of cluster nodes to start up in addition to the main Liferay
 # instance. Setting this to 0 means there is no clustering.
