--- a/gradle.properties
+++ b/gradle.properties
@@ -41,7 +41,7 @@ lr.docker.environment.compose.files=
 # value (or a blank value) is ignored and disables the service.
 lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
-lr.docker.environment.service.enabled[mysql]=false
+lr.docker.environment.service.enabled[mysql]=true
 lr.docker.environment.service.enabled[postgres]=false
 
 # Optional
